[gd_scene load_steps=27 format=3 uid="uid://bf4jil1d0pjen"]

[ext_resource type="Script" uid="uid://d2hkwg20n04pp" path="res://player/player.gd" id="1_b0x02"]
[ext_resource type="Texture2D" uid="uid://mscd0rf1x2wc" path="res://arts/player.png" id="1_b63l5"]
[ext_resource type="AudioStream" uid="uid://bphkcwcvfui5v" path="res://sound/digging-v1-27585.mp3" id="4_vtp6p"]
[ext_resource type="Script" uid="uid://dhv1ouf6hxsyy" path="res://player/DiggPlayer.gd" id="5_wwnyo"]
[ext_resource type="AudioStream" uid="uid://bililbxykyrfk" path="res://sound/Chopping Wood .mp3" id="6_h85y2"]
[ext_resource type="Script" uid="uid://dtkwretf787h3" path="res://player/ChopPlayer.gd" id="7_0tvku"]
[ext_resource type="Texture2D" uid="uid://cxuk8y2w7fc0d" path="res://arts/pixel-viking-1.jpg" id="8_snomj"]
[ext_resource type="Texture2D" uid="uid://b28mjablv0mxo" path="res://arts/pixel-viking-2.jpg" id="9_uo6co"]
[ext_resource type="Texture2D" uid="uid://dm215l4h5f1pv" path="res://arts/pixel-viking-3.jpg" id="10_1q6hr"]
[ext_resource type="Script" uid="uid://bb8rxhne6lhy1" path="res://scenes/AnimatedFace.gd" id="10_8t03j"]
[ext_resource type="Script" uid="uid://byrk66dfmxsvw" path="res://player/action_control.gd" id="11_ebec5"]
[ext_resource type="Texture2D" uid="uid://c7omodkcir1cv" path="res://assets/dig.png" id="12_ebec5"]
[ext_resource type="Texture2D" uid="uid://c07cukil3bj7e" path="res://assets/action_buttons/collect_water.png" id="13_yllr7"]

[sub_resource type="Animation" id="Animation_1di4i"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_04fdv"]
resource_name = "walkDown"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(0, 1), Vector2i(0, 2), Vector2i(0, 3)]
}

[sub_resource type="Animation" id="Animation_rfdbj"]
resource_name = "walkLeft"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(2, 0), Vector2i(2, 1), Vector2i(2, 2), Vector2i(2, 3)]
}

[sub_resource type="Animation" id="Animation_rghk0"]
resource_name = "walkRight"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(3, 0), Vector2i(3, 1), Vector2i(3, 2), Vector2i(3, 3)]
}

[sub_resource type="Animation" id="Animation_0cfn5"]
resource_name = "walkUp"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(1, 0), Vector2i(1, 1), Vector2i(1, 2), Vector2i(1, 3)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sty48"]
_data = {
&"RESET": SubResource("Animation_1di4i"),
&"walkDown": SubResource("Animation_04fdv"),
&"walkLeft": SubResource("Animation_rfdbj"),
&"walkRight": SubResource("Animation_rghk0"),
&"walkUp": SubResource("Animation_0cfn5")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_582m7"]
size = Vector2(14, 2)

[sub_resource type="Animation" id="Animation_vxlpq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_bkqq3"]
resource_name = "hurtBlink"
length = 0.4
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 0, 0, 0.498039), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sy8eo"]
_data = {
&"RESET": SubResource("Animation_vxlpq"),
&"hurtBlink": SubResource("Animation_bkqq3")
}

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_71amf"]

[sub_resource type="SpriteFrames" id="SpriteFrames_alqk5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_snomj")
}, {
"duration": 1.0,
"texture": ExtResource("9_uo6co")
}, {
"duration": 1.0,
"texture": ExtResource("10_1q6hr")
}],
"loop": true,
"name": &"angry",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_snomj")
}, {
"duration": 1.0,
"texture": ExtResource("9_uo6co")
}, {
"duration": 1.0,
"texture": ExtResource("10_1q6hr")
}],
"loop": true,
"name": &"default",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_snomj")
}, {
"duration": 1.0,
"texture": ExtResource("9_uo6co")
}, {
"duration": 1.0,
"texture": ExtResource("10_1q6hr")
}],
"loop": true,
"name": &"happy",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_snomj")
}, {
"duration": 1.0,
"texture": ExtResource("9_uo6co")
}, {
"duration": 1.0,
"texture": ExtResource("10_1q6hr")
}],
"loop": true,
"name": &"sad",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_yllr7"]
radius = 20.025

[node name="Player" type="CharacterBody2D" groups=["Player"]]
script = ExtResource("1_b0x02")

[node name="Sprite2D" type="Sprite2D" parent="."]
clip_children = 2
texture = ExtResource("1_b63l5")
offset = Vector2(0, -8)
hframes = 4
vframes = 7

[node name="ColorRect" type="ColorRect" parent="Sprite2D"]
visible = false
offset_left = -20.0
offset_top = -26.0
offset_right = 20.0
offset_bottom = 14.0
color = Color(1, 0, 0, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_sty48")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_582m7")

[node name="Effects" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_sy8eo")
}

[node name="hurtTimer" type="Timer" parent="."]
one_shot = true

[node name="Identity" type="Label" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 23.0
text = "Player"

[node name="Camera2D" type="Camera2D" parent="."]

[node name="DiggPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_vtp6p")
script = ExtResource("5_wwnyo")

[node name="ChopPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_h85y2")
script = ExtResource("7_0tvku")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0

[node name="AnimatedFace" type="AnimatedSprite2D" parent="CanvasLayer/Control"]
material = SubResource("CanvasItemMaterial_71amf")
position = Vector2(-140, -100)
scale = Vector2(0.25, 0.25)
sprite_frames = SubResource("SpriteFrames_alqk5")
animation = &"sad"
script = ExtResource("10_8t03j")

[node name="ActionButtons" type="CanvasLayer" parent="."]

[node name="action_control" type="Control" parent="ActionButtons"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("11_ebec5")

[node name="HBoxContainer" type="HBoxContainer" parent="ActionButtons/action_control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -36.0
offset_top = -72.0
offset_right = 36.0
grow_horizontal = 2
grow_vertical = 0

[node name="Dig" type="Button" parent="ActionButtons/action_control/HBoxContainer"]
layout_mode = 2
icon = ExtResource("12_ebec5")
metadata/_edit_use_anchors_ = true

[node name="CollectWater" type="Button" parent="ActionButtons/action_control/HBoxContainer"]
layout_mode = 2
icon = ExtResource("13_yllr7")

[node name="Button" type="Button" parent="ActionButtons/action_control/HBoxContainer"]
layout_mode = 2
icon = ExtResource("13_yllr7")

[node name="Button2" type="Button" parent="ActionButtons/action_control/HBoxContainer"]
layout_mode = 2
icon = ExtResource("13_yllr7")

[node name="Button3" type="Button" parent="ActionButtons/action_control/HBoxContainer"]
layout_mode = 2
icon = ExtResource("13_yllr7")

[node name="Button4" type="Button" parent="ActionButtons/action_control/HBoxContainer"]
layout_mode = 2
icon = ExtResource("13_yllr7")

[node name="Button5" type="Button" parent="ActionButtons/action_control/HBoxContainer"]
layout_mode = 2
icon = ExtResource("13_yllr7")

[node name="Button6" type="Button" parent="ActionButtons/action_control/HBoxContainer"]
layout_mode = 2
icon = ExtResource("13_yllr7")

[node name="Button7" type="Button" parent="ActionButtons/action_control/HBoxContainer"]
layout_mode = 2
icon = ExtResource("13_yllr7")

[node name="ProgressBar" type="ProgressBar" parent="ActionButtons/action_control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -146.5
offset_top = -274.0
offset_right = 146.5
offset_bottom = -247.0
grow_horizontal = 2
grow_vertical = 2

[node name="Player_Hurtbox" type="Area2D" parent="."]
collision_mask = 2

[node name="Player_Hitbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 8

[node name="PlayerDetectionArea" type="Area2D" parent="." groups=["Player"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectionArea"]
shape = SubResource("CircleShape2D_yllr7")

[connection signal="finished" from="DiggPlayer" to="DiggPlayer" method="_on_finished"]
[connection signal="finished" from="ChopPlayer" to="." method="_on_chop_player_finished"]
[connection signal="pressed" from="ActionButtons/action_control/HBoxContainer/Dig" to="ActionButtons/action_control" method="_on_dig_pressed"]
[connection signal="pressed" from="ActionButtons/action_control/HBoxContainer/CollectWater" to="ActionButtons/action_control" method="_on_collect_water_pressed"]
[connection signal="area_entered" from="PlayerDetectionArea" to="." method="_on_player_detection_area_area_entered"]
